--- a/styles/style.css
+++ b/styles/style.css
@@ -36,9 +36,12 @@ table {
   border-collapse: collapse;
   width: 100%;
 }
+th {
+  text-align: center;
+}
 th,
 td {
   border: 1px solid black;
   padding: 8px;
-  text-align: center;
+  word-wrap: break-word;
 }
