feat:Verificar senhas, e retornar erros caso os campos não estejam preenchidos🚀

--- a/styles/style-cadastro.css
+++ b/styles/style-cadastro.css
@@ -95,3 +95,7 @@ input[type="password"]:focus {
   vertical-align: middle;
   margin-left: 0.5rem;
 }
+.message-error {
+  color: red;
+  margin-bottom: 2rem;
+}
