--- a/styles/style.css
+++ b/styles/style.css
@@ -43,5 +43,12 @@ th,
 td {
   border: 1px solid black;
   padding: 8px;
-  word-wrap: break-word;
+}
+.delete {
+  border-top: none;
+  border-left: none;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
